# flare_pp

./: .buildinfo  .gitignore  CMakeLists.txt  README.md  annotated.html  b2_8h_source.html  b2__norm_8h_source.html  b2__simple_8h_source.html  b3_8h_source.html  classB2-members.html  classB2.html  classB2__Norm-members.html  classB2__Norm.html  classB2__Simple-members.html  classB2__Simple.html  classB3-members.html  classB3.html  classClusterDescriptor-members.html  classClusterDescriptor.html  classDescriptor-members.html  classDescriptor.html  classDescriptorValues-members.html  classDescriptorValues.html  classFourBody-members.html  classFourBody.html  classGP-members.html  classGP.html  classKernel-members.html  classKernel.html  classNormalizedDotProduct-members.html  classNormalizedDotProduct.html  classNormalizedDotProduct__ICM-members.html  classNormalizedDotProduct__ICM.html  classSparseGP-members.html  classSparseGP.html  classSquaredExponential-members.html  classSquaredExponential.html  classStructure-members.html  classStructure.html  classThreeBody-members.html  (+38 more)
_sources/: index.rst.txt
ctests/: CMakeLists.txt  dft_data.xyz  test_descriptor.cpp  test_parallel_sgp.cpp  test_sparse_gp.cpp  test_utils.cpp
docs/: conf.py  index.rst
flare_pp/: bffs.html  descriptors.html  flare_pp.html  kernels.html  lmpotf.html  lmpotf.py  parallel_sgp.py  sparse_gp.py  sparse_gp_calculator.py  structure.html  utils.py
lammps/: lammps_descriptor.cpp  (+5 more)
scripts/: CMakeLists.txt  mpi_build.cpp  omp_build.cpp
timing/: CMakeLists.txt  mpi_construction.cpp  multinode_mpi.sh
(+72 files in other folders)
